@@ -188,6 +188,7 @@ export LDAP_ENABLED_SERVICE='enabledService'
 export LDAP_SERVICE_DOMAIN_ALIAS='domainalias'
 export LDAP_SERVICE_MAIL='mail'
 export LDAP_SERVICE_INTERNAL='internal'
+export LDAP_SERVICE_DOVEADM='doveadm'
 export LDAP_SERVICE_SMTP='smtp'
 export LDAP_SERVICE_SMTPS='smtpsecured'
 export LDAP_SERVICE_POP3='pop3'
