@@ -514,6 +514,7 @@ ${LDAP_ATTR_USER_QUOTA}: 104857600
 ${LDAP_ATTR_USER_PASSWD}: $(gen_ldap_passwd "${FIRST_USER_PASSWD}")
 ${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_MAIL}
 ${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_INTERNAL}
+${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_DOVEADM}
 ${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_SMTP}
 ${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_SMTPS}
 ${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_POP3}
