@@ -173,10 +173,11 @@ def ldif_mailuser(domain, username, passwd, cn, quota, groups=''):
         ('homeDirectory',       [homeDirectory]),
         ('accountStatus',       ['active']),
         ('mtaTransport',        ['dovecot']),
-        ('enabledService',      ['mail', 'smtp', 'smtpsecured',
+        ('enabledService',      ['internal', 'doveadm',
+                                 'mail', 'smtp', 'smtpsecured',
                                  'pop3', 'pop3secured', 'imap', 'imapsecured',
                                 'deliver', 'lda', 'forward', 'senderbcc', 'recipientbcc',
-                                 'managesieve', 'managesievesecured', 'internal',
+                                 'managesieve', 'managesievesecured',
                                  'sieve', 'sievesecured', 'shadowaddress',
                                 'displayedInGlobalAddressBook', ]),
         ('memberOfGroup',       groups),
